--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-sapce);
-  padding-top: 40px;
+  padding-top: 45px;
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
@@ -13,4 +14,5 @@
 
 .screen-header__icons span {
   margin-left: 25px;
+  position: relative;
 }
