--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -6,6 +6,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(95, 65, 65);
+  color: white;
   font-weight: 600;
 }
