--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -101,6 +101,7 @@
   border-top-left-radius: 15px;
   margin-right: 0px;
   margin-left: 5px;
+  color: white;
 }
 
 .message-row--own .message__info {
@@ -161,6 +162,7 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
+  color: white;
 }
 
 .reply__column button i {
