--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -55,3 +55,33 @@
   color: inherit;
   font-size: 13px;
 }
+
+#login-form input {
+  color: white;
+}
+
+@keyframes hideSplashScreen {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+#splash-screen__main-background {
+  position: absolute;
+
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: hideSplashScreen 1s ease-in-out forwards;
+  animation-delay: 0.5s;
+}
+
+#splash-screen__main-background img {
+  height: 100vh;
+  width: 100vw;
+}
