--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-  --yellow: #fae100;
+  --yellow: #154d86;
   --horizontal-sapce: 25px;
   --main-border: 1px solid rgba(0, 0, 0, 0.2);
   --sub-color: rgba(0, 0, 0, 0.5);
